--- a/pdf/book.tex
+++ b/pdf/book.tex
@@ -45,7 +45,7 @@
 \setcounter{tocdepth}{1}
 \setmonofont[Scale=0.8]{Inconsolata LGC}
 \defaultfontfeatures[\emojifont]{Scale=1.15}
-\newfontface{\emojifont}{Symbola_hint.ttf}
+\newfontface{\emojifont}{Symbola}
 \newfontfamily{\cjkfont}{TW-Sung}
 \setTransitionsFor{MiscellaneousSymbolsAndPictographs}{\emojifont}{\normalfont}{}
 
