Translate intro in spanish

--- a/pdf/book.tex
+++ b/pdf/book.tex
@@ -87,29 +87,22 @@
 
 \frontmatter
 
-  \noindent Copyright \textcopyright{} 2024 by Marijn Haverbeke
+  \noindent Copyright \textcopyright{} 2024 por Marijn Haverbeke
 
   \vskip 1em
 
-  \noindent This work is licensed under a Creative Commons
-  attribution-noncommercial license
-  (\url{http://creativecommons.org/licenses/by-nc/3.0/}). All code in
-  the book may also be considered licensed under an MIT license
+  \noindent Este trabajo está licenciado bajo la licencia Creative Commons
+  attribution-noncommercial
+  (\url{http://creativecommons.org/licenses/by-nc/3.0/}). Todo el código de este libro puede ser considerado bajo la licencia MIT
   (\url{https://eloquentjavascript.net/code/LICENSE}).
 
-  The illustrations are contributed by various artists: Cover by
-  Péchane Sumi-e. Chapter illustrations by Madalina Tantareanu. Pixel
-  art in Chapters 7 and 16 by Antonio Perdomo Pastor. Regular
-  expression diagrams in Chapter 9 generated with
-  \href{http://regexper.com}{regexper.com} by Jeff Avallone. Village
-  photograph in Chapter 11 by Fabrice Creuzot. Game concept for
-  Chapter 16 by \href{http://lessmilk.com}{Thomas Palef}.
+  Las ilustraciones son contribuciones de varios artistas: Portada por Péchane Sumi-e. Ilustraciones de capítulos por Madalina Tantareanu. Arte de píxeles en los capítulos 7 y 16 por Antonio Perdomo Pastor. Diagramas de expresiones regulares en el capítulo 9 generados con \href{http://regexper.com}{regexper.com} por Jeff Avallone. Fotografía del pueblo en el capítulo 11 por Fabrice Creuzot. Concepto de juego para el capítulo 16 por \href{http://lessmilk.com}{Thomas Palef}.
+
+  Traducción al español por \href{http://twitch.tv/midudev}{midudev}.
 
   \vskip 1em
 
-  \noindent You can buy a print version of this book, with an extra
-  bonus chapter included, printed by No Starch Press at
-  \url{http://a-fwd.com/com=marijhaver-20&asin-com=1593279507}.
+  \noindent Puedes comprar una versión impresa de este libro, con un capítulo extra incluido, impreso por No Starch Press en \url{http://a-fwd.com/com=marijhaver-20&asin-com=1593279507}.
 
 {
   \hypersetup{hidelinks}
