traducido texto introductorio de las pistas. Añadido mi nombre en la presentación

--- a/pdf/book.tex
+++ b/pdf/book.tex
@@ -98,7 +98,7 @@
 
   Las ilustraciones son contribuciones de varios artistas: Portada por Péchane Sumi-e. Ilustraciones de capítulos por Madalina Tantareanu. Arte de píxeles en los capítulos 7 y 16 por Antonio Perdomo Pastor. Diagramas de expresiones regulares en el capítulo 9 generados con \href{http://regexper.com}{regexper.com} por Jeff Avallone. Fotografía del pueblo en el capítulo 11 por Fabrice Creuzot. Concepto de juego para el capítulo 16 por \href{http://lessmilk.com}{Thomas Palef}.
 
-  Traducción al español por \href{http://twitch.tv/midudev}{midudev}.
+  Traducción al español por \href{http://twitch.tv/midudev}{midudev} y \href{https://github.com/ckdvk}{ckdvk}.
 
   \vskip 1em
 
